test/Macros/CodiraifyImport/MacroErrors/UnexpectedCountType.code
// REQUIRES: language_language_parser

// XFAIL: *

// RUN: not %target-language-frontend %s -language-version 5 -module-name main -disable-availability-checking -typecheck -plugin-path %language-plugin-dir -dump-macro-expansions 2>&1 | %FileCheck --match-full-lines %s
// RUN: %target-typecheck-verify-language %s -language-version 5 -module-name main -disable-availability-checking -typecheck -plugin-path %language-plugin-dir -verify

@_CodiraifyImport(.countedBy(pointer: .param(1), count: "len"))
fn myFunc(_ ptr: UnsafePointer<CInt>, _ len: String) {
}

// CHECK:      @_alwaysEmitIntoClient @_disfavoredOverload
// CHECK-NEXT: fn myFunc(_ ptr: UnsafeBufferPointer<CInt>) {
// CHECK-NEXT:     myFunc(ptr.baseAddress!, String(exactly: ptr.count)!)
// CHECK-NEXT: }

// expected-error@_CodiraifyImport:2{{no exact matches in call to initializer}}
